# ChangeLog for net-analyzer/wireshark
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.608 2014/04/27 09:08:58 ago Exp $

  27 Apr 2014; Agostino Sarubbo <ago@gentoo.org> wireshark-1.10.7.ebuild:
  Stable for x86, wrt bug #508506

  26 Apr 2014; Agostino Sarubbo <ago@gentoo.org> wireshark-1.10.7.ebuild:
  Stable for amd64, wrt bug #508506

  25 Apr 2014; Jeroen Roovers <jer@gentoo.org> wireshark-1.10.7.ebuild:
  Switch to USE=gtk3 as default.

  23 Apr 2014; Jeroen Roovers <jer@gentoo.org> wireshark-1.10.7.ebuild:
  Stable for HPPA (bug #508506).

*wireshark-1.10.7 (23 Apr 2014)
*wireshark-1.8.14 (23 Apr 2014)

  23 Apr 2014; Jeroen Roovers <jer@gentoo.org> +wireshark-1.8.14.ebuild,
  +wireshark-1.10.7.ebuild:
  Version bump (bug #508506).

*wireshark-1.11.3 (16 Apr 2014)

  16 Apr 2014; Jeroen Roovers <jer@gentoo.org>
  -wireshark-1.11.3_pre2375.ebuild, +wireshark-1.11.3.ebuild:
  Version bump.

*wireshark-1.11.3_pre2375 (14 Apr 2014)

  14 Apr 2014; Jeroen Roovers <jer@gentoo.org>
  -wireshark-1.11.3_pre2150.ebuild, +wireshark-1.11.3_pre2375.ebuild:
  Version bump.

*wireshark-1.11.3_pre2150 (29 Mar 2014)

  29 Mar 2014; Jeroen Roovers <jer@gentoo.org>
  -wireshark-1.11.3_pre1889.ebuild, +wireshark-1.11.3_pre2150.ebuild:
  Version bump.

  24 Mar 2014; Jeroen Roovers <jer@gentoo.org> -wireshark-1.8.12.ebuild,
  -wireshark-1.10.5.ebuild,
  -files/wireshark-1.10.4-gtk-deprecated-warnings.patch:
  Old.

  24 Mar 2014; Agostino Sarubbo <ago@gentoo.org> wireshark-1.10.6.ebuild,
  wireshark-1.8.13.ebuild:
  Stable for ppc64, wrt bug #503792

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> wireshark-1.10.6.ebuild,
  wireshark-1.8.13.ebuild:
  Stable for alpha, wrt bug #503792

  18 Mar 2014; Agostino Sarubbo <ago@gentoo.org> wireshark-1.10.6.ebuild,
  wireshark-1.8.13.ebuild:
  Stable for ia64, wrt bug #503792
