@@ -19,23 +19,23 @@ EBUILD kdelibs-4.11.5.ebuild 8612 SHA256 b24bcf279d245608c314626206a209714b243f1
 EBUILD kdelibs-4.12.3.ebuild 8540 SHA256 75de8f1a948b64d7cddd04f92524f43f54a995ef0818faf31de693d5f343dfb7 SHA512 ca78cfebdd70e2424def3d325db2026b76b342e3d7fa5cf0b02960f8260dd6384aa85d5bfcc88c186d03aa044699105fb5d4c068f58731cfc68c0d2290e633be WHIRLPOOL f81535e3a07ab4b72cb200119254734beafc6650aaebac647811ca4a83203674398bda647ceaf1a3bf59996d5a7aa90975add869b834813d49cbe28d2100cefb
 EBUILD kdelibs-4.12.5.ebuild 8539 SHA256 fe2573758775e30e9c4d369340418ed794f39f9fff3ad2e94373df1211f4d932 SHA512 26f62485d994f0ff7e54b4d9e5279d39ab306411a6b71528f27a43552b1f676b0eede9314c15ffe067d0858874dc5f111cd8e7e2fcdea138100b2f9333ab7532 WHIRLPOOL 20afe0c58440db2b7162fc877ff45e88f621b307d2fd89650fd247e19f418d85f7a450a217221faedbf8a5c8e35c50121d8dfca088637cc2d2d3d306cc6e21c3
 EBUILD kdelibs-4.13.0.ebuild 8539 SHA256 9473e4f35f4c2bb37a6d437ca083e6f633ac75f8431d0b0acc0f037efbbd48ca SHA512 916fe1126cc2cd2d0320379e1523bd6df636a393bb643b8bad84095731ea45549d1c39ba3fc9ac2530032bc80f6e9cc6f59df46c0d4fd0771f08b6180bdfd092 WHIRLPOOL ef65670aacdcb8c889c3f009fb38f34566c623db910e76dd6381a7e3761d00c404c6a7f5af1064099d964c3f9cf579bb4e5db040621230953ee66d176daf7d7b
-MISC ChangeLog 54631 SHA256 00b38bf105da110a2c25ae6feb8b3806c533cfc5466d9d6ba49be414e6565ff0 SHA512 049132c66774a34720f3ddc45605bd32c81dd8c8c0a20523bda7f922bf6c1cb19497e289882250bdcad84268ac0eacd13dd853423157107f76bce251be89adb3 WHIRLPOOL 46d244f63b98fcd6d638123cc084fdcb1451da13d24cbcfdebf1b922a53bcf8c455127fbb4a44ba6c1ec5c4c1fcfbeab8a76b0191f71fd66c3e8cdee923a1836
+MISC ChangeLog 55032 SHA256 a619c03647fe43871a9156bc138aba045836d1fd6d8774d75d5b876151a02ce4 SHA512 69e0acbb7f81aee681b0fb1fe9a14cbee65f3c93d082c88db11986c6dadf7941d6e09c7c80683029fe7063668fc3ebf87a204f526fc2a0b0be8892f2bba8d7d7 WHIRLPOOL 19d828c42f09da67b3f6ea08a40f1bb16ff06ad0b56f3ec0f7551ce16216f02685376f30ba5b3c84da9101a0c53dc2b218bb663a1206afa2dc93b69a7582406b
 MISC ChangeLog-2009 110608 SHA256 845ba7764dc9cabd4753d146e82cc0347a0dbbe21a76a4aab453106e7d70ba1f SHA512 c643c3bd742f1c2c4322217b4d9f2992310e9bf86f585ef687cf68f54ed2a86d2950f7f3c3fc5021a2dd472b6db39e17415ca6cde478e4ef4f91317a116889b5 WHIRLPOOL 8dd58bffc294a811176bc3f9882a0fa8a12c02fcdd692bacfccfc9745646d5062d3980553388fcdc835bbbecefd0783f029d07a5999e7208ceece5a93fa36893
 MISC metadata.xml 391 SHA256 fc53374fd33574da578cb1d31e89f7cbdee57aff3cbf5d7284e778edbce2acc0 SHA512 6c6a2d72311cd226b6f8b4b971bcf3547c43b54148b7286849f37ed1d586984aa39642e83f69034d942c4e478fa41ba7d815a13a0eb01f8ed5b74b3552270c69 WHIRLPOOL 9313efac3ba14c2b1b75703071bde802b41027e46d511bc8cf3efa055cf6967758aac541d60bf10a10e24c96b6f2109e848d12950cf802398d6563290c8c2039
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTX/sTAAoJEGVpnaTzz9K9IvoP/iSb8HpTgClcapuUgsJJcMT2
-7dYPoRWYL6gdGfdzV+IvmkQONCq1PBo4CIGvb8m5Drg86oO0DeqlHPmUpnZTsUNN
-w5EfE7FavBmoVNf+d5196N/7dPhI+rIov69Kgf4Lbhzx/oXJsQ3p877VAm1cl7hU
-q+szKLRW5uPntxq5HywLKQYyVLj9F/ax/zcZuizVvAcDvcqPp2/mV4sm0EA4f0j2
-JWNiVZ+2N8wT+SUIj33TidiMeeBjNGAv4xmiazhwppnJ7TJhZXmvSqiEkmCmoHqz
-g4fPwzc6NhbCtj0pw/1w5ZXT3x0+hzCDr3CfgHboa3GVotOvvH3RyE6VZo5D+sTH
-fU9t050cwpY+lqsKT+QeI10fEZFRX74uIDjAaqt6qyC8o8nZGHXjRQ/5Hj+RVsUY
-/Yq5Ujqh0Ek0aQ10C965vw57pXFqoM+66OxzFiMJTAnM5IUotvH+wTHhIZYAZV8M
-7YkgauIYtv4BfU+VeXWiZgFrLeBa5PWXc5n80vte4RNOBAlcAm0Ji7sd+w7mJQzG
-7wpd5z4QbyecStWV7EJXlTmS/3gmk46bEvlO9tmIAFaCkUyEWnSoviz4YiEXoDVz
-JZWXKV6Svg2Pccht5xr5pXRry/C4roQFy+5Zs+QRqS1sxjh6+bGOl/O9kctzW4HK
-hmdOx9nHyr4P7YN8Fgvy
-=Blb/
+iQIcBAEBCAAGBQJTYCZjAAoJEGVpnaTzz9K9JO0P/RPsvBh3h80v8x8ziyc8Dty4
+71Zh91qUw1zmc9HiGVz/EAZwHtYaJrZanTDTcwusrtv7bF7RhqQbQrsvsNOdCbF7
+gCIml9gsFwkk+8s59xOn8vRfN2j73WYtYxzCumiDEj2fYKkAbemAzquykNwA0nx0
+fn+75Nf7xUny+AhiXAJMLV97/XHOrqgrZQEIcE+Q9dFbISu1ssauzvTpV4CQbUCL
+29taxmbG68USIMbJ2DivyW3MbtpYRMmk5TgNk7UDPY9oaVm5jAj5/NpPyuq/C7q5
+qk21CW3BSItgBmwbrDz+UEpm3g1QGuGheJZyf9V3tuywyHCuAMPGruqW27/iQYXm
+Lk/Y/cAUPppWVH7lglA6fN1srCUFDVEboASj6vK09QYwaGuI+6Zxw3FumhIlRnHx
+irTEK2qhidtOFAzffMvhn6Jvto7rif9UUULaWOV61RM3oTKd4EACEwuQDBc9dwqk
+NnPb2Jf+apWXpXx46d8ctMzQ08hcirB7ah/PL2cu3/viccameUpu5MReFrh6CRWJ
+Ng/fJJrKgoFDrAHobCq2Qgq03IYhnh8oE2GSi/49G8G892gQoaCh/mRaDQYlVOnJ
+lB+ikfRNI2aELCfP8EIIorTLVWKv8drjXb996vg1YbGipclGeLr4RPZeNppuopiX
+ugaZKukcmE38kaR0SnJ1
+=4KCV
 -----END PGP SIGNATURE-----
