@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/wireshark-1.8.14.ebuild,v 1.1 2014/04/23 14:23:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/wireshark-1.8.14.ebuild,v 1.2 2014/04/29 22:11:22 vapier Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_6 python2_7 )
@@ -45,19 +45,21 @@ RDEPEND="
 	zlib? ( sys-libs/zlib !=sys-libs/zlib-1.2.4 )
 "
 
+# We need perl for `pod2html`.  The rest of the perl stuff is to block older
+# and broken installs. #455122
 DEPEND="
 	${RDEPEND}
+	dev-lang/perl
+	!<virtual/perl-Pod-Simple-3.170
+	!<perl-core/Pod-Simple-3.170
 	doc? (
 		app-doc/doxygen
 		dev-libs/libxml2
 		dev-libs/libxslt
 		doc-pdf? ( dev-java/fop )
 	)
-	>=virtual/perl-Pod-Simple-3.170.0
 	sys-devel/bison
 	sys-devel/flex
-	virtual/perl-Getopt-Long
-	virtual/perl-Time-Local
 	virtual/pkgconfig
 "
 
